clang/test/BSC/Negative/Ownership/RuleCheck/array_to_ptr_borrow/array_to_ptr_borrow.cbs
// RUN: %clang_cc1 -verify %s

int bar(void* borrow ptr);

void foo(void) {
  int array[10];
  bar(array); // expected-error {{incompatible borrow types, cannot cast 'int[10]' to 'void *borrow'}}
}